<resources>
    <string name="app_name">Pocket Library</string>
    <string name="take_picture_button_title">{fa_camera} Take picture</string>
    <string name="open_gallery_button_title">{fa_picture_o} Open from gallery</string>
    <string name="find_contour">Find contour</string>
    <string name="detect_rectangle">Detect rectangle</string>
    <string name="adjust_perspective">Adjust perspective</string>
    <string name="run_ocr">Run OCR</string>
    <string name="detect_book">Detect book</string>
    <string name="adjust_crop_button">{fa_crop} Adjust</string>
    <string name="confirm_crop_button">{fa_check} Confirm</string>
    <string name="image_preview">Image preview</string>
    <string name="extracting_features">Extracting features</string>
    <string name="database_searching">Searching in the database</string>
    <string name="google_searching">Querying Google Books API</string>
    <string name="running_ocr">Running OCR</string>
    <string name="remove_background">Remove background</string>
    <string name="select_book">{fa_check} Select</string>
    <string name="book_cover_description">Book cover</string>
    <string name="n_a">n/a</string>
    <string name="isbn_n_a">ISBN: n/a</string>
    <string name="publish_date_n_a">Publish date: n/a</string>
    <string name="pages_n_a">Pages: n/a</string>
    <string name="authors_n_a">Authors: n/a</string>
    <string name="title_n_a">Title: n/a</string>
    <string name="url_n_a">URL: n/a</string>
    <string name="publisher_n_a">Publisher: n/a</string>
    <string name="detect_by_cover_image">{fa_file_image_o} Detect by cover image</string>
    <string name="detect_by_cover_text">{fa_file_text_o} Detect by cover text</string>
    <string name="about">{fa_info_circle} About</string>
    <string name="copyright">Copyright © 2017 by Ciprian Olariu</string>
    <string name="aboutDescription">The objective of this app is to give to users the possibility to find out more information about a book they see.\n\nFor that, a user will take a photo of the book, which will be then automatically detected, cropped and identified.\n\nThe app will then retrieve and display useful information about that book..</string>
</resources>
