<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/fetchingProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/bookCoverImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/book_cover_description"
        android:visibility="invisible"
        app:srcCompat="@android:color/transparent" />

    <TextView
        android:id="@+id/bookTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bookCoverImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/title_n_a"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/bookAuthorsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bookTitleTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/authors_n_a"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/bookISBNTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bookAuthorsTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/isbn_n_a"
        android:textSize="15sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/bookPublisherTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bookISBNTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/publisher_n_a"
        android:textSize="15sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/bookDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bookPublisherTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/publish_date_n_a"
        android:textSize="15sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/bookPagesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bookDateTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/pages_n_a"
        android:textSize="15sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/bookURLTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bookPagesTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:autoLink="web"
        android:gravity="center"
        android:text="@string/url_n_a"
        android:textSize="15sp"
        android:visibility="invisible" />

</RelativeLayout>