<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.beardedhen.androidbootstrap.BootstrapCircleThumbnail
        android:id="@+id/appLogoImage"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_launcher"
        app:bootstrapBrand="primary"
        app:hasBorder="false" />

    <TextView
        android:id="@+id/appLogoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appLogoImage"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/aboutTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appLogoText"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/aboutDescription"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/copyright" />

</RelativeLayout>