<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_intro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.scipianus.pocketlibrary.IntroActivity">

    <com.beardedhen.androidbootstrap.BootstrapCircleThumbnail
        android:id="@+id/appLogoImage"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_launcher"
        app:bootstrapBrand="primary"
        app:hasBorder="false" />

    <TextView
        android:id="@+id/appLogoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appLogoImage"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp"
        android:textStyle="bold" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/openGalleryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:onClick="loadFromGallery"
        app:bootstrapBrand="primary"
        app:bootstrapSize="lg"
        app:bootstrapText="@string/open_gallery_button_title"
        app:roundedCorners="true" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/openCameraButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/openGalleryButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:onClick="openCameraRequest"
        app:bootstrapBrand="primary"
        app:bootstrapSize="lg"
        app:bootstrapText="@string/take_picture_button_title"
        app:roundedCorners="true" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/aboutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/openCameraButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:onClick="openAboutActivity"
        app:bootstrapBrand="primary"
        app:bootstrapSize="lg"
        app:bootstrapText="@string/about"
        app:roundedCorners="true" />

</RelativeLayout>
