<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_view_picture"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.scipianus.pocketlibrary.ViewPictureActivity">

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/nextStepButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="performNextStep"
        app:bootstrapBrand="primary"
        app:bootstrapSize="lg"
        app:bootstrapText=""
        app:roundedCorners="true" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/adjustCropButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="openAdjustCropActivity"
        android:visibility="invisible"
        app:bootstrapBrand="danger"
        app:bootstrapSize="lg"
        app:bootstrapText="@string/adjust_crop_button"
        app:roundedCorners="true" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/confirmCropButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="performNextStep"
        android:visibility="invisible"
        app:bootstrapBrand="success"
        app:bootstrapSize="lg"
        app:bootstrapText="@string/confirm_crop_button"
        app:roundedCorners="true" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/image_preview" />

    <ProgressBar
        android:id="@+id/extractProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

</RelativeLayout>
